# fake_object_filter

./: CMakeLists.txt  LICENSE  package.xml  plugin.xml
config/: fake_object.yaml
include/fake_object_filter/: fake_object_filter.hpp
launch/: scan_filter.launch.py
src/: fake_object_filter.cpp  object_filter_node.cpp  rectangle_node.cpp
